--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "npm-run-all lint:* test:*",
-    "test:ember": "ember test",
-    "postinstall": "rm -rf node_modules/ember-table/addon/styles"
+    "test:ember": "ember test"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
-    "@fullhuman/postcss-purgecss": "^4.0.0",
     "@glimmer/component": "^1.0.1",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.1.0",
@@ -35,7 +33,7 @@
     "ember-cli-htmlbars": "^5.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-netlify": "^0.4.1",
-    "ember-cli-postcss": "^7.0.0",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.20.0",
@@ -53,9 +51,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^14.0.0",
     "qunit-dom": "^1.2.0",
-    "tailwindcss": "^2.0.3"
+    "sass": "^1.32.7"
   },
   "engines": {
     "node": "14.*"
