--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "npm-run-all lint test:*",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "postinstall": "rm -rf node_modules/ember-table/addon/styles"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -37,7 +38,6 @@
     "ember-cli-htmlbars": "^5.3.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-netlify": "^0.4.1",
-    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
     "ember-data": "~3.25.0",
@@ -61,8 +61,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "qunit": "^2.14.0",
-    "qunit-dom": "^1.6.0",
-    "sass": "^1.32.7"
+    "qunit-dom": "^1.6.0"
   },
   "engines": {
     "node": "14.*"
